complete bidirectional association