@@ -67,20 +67,24 @@ public class BookServiceImpl implements BookService {
     }
 
     @Override
-    @Transactional(readOnly = true)
+//    @Transactional(readOnly = true)
     public Iterable<BookDto> findBooksByAuthor(String authorName) {
-        return bookRepository.findBooksByAuthorsAuthorName(authorName)
+        Author author =  authorRepository.findById(authorName).orElseThrow(NotFoundException::new);
+        return author.getBooks().stream()
+//        return bookRepository.findBooksByAuthorsAuthorName(authorName)
                 .map(book -> modelMapper.map(book, BookDto.class))
-                .collect(Collectors.toList());
+                .toList();
 
     }
 
     @Override
-    @Transactional(readOnly = true)
+//    @Transactional(readOnly = true)
     public Iterable<BookDto> findBooksByPublisher(String publisherName) {
-        return bookRepository.findBooksByPublisherPublisherName(publisherName)
+        Publisher publisher = publisherRepository.findById(publisherName).orElseThrow(NotFoundException::new);
+        return publisher.getBooks().stream()
+        // bookRepository.findBooksByPublisherPublisherName(publisherName)
                 .map(book -> modelMapper.map(book, BookDto.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -92,10 +96,13 @@ public class BookServiceImpl implements BookService {
     @Override
     @Transactional(readOnly = true)
     public Iterable<String> findPublishersByAuthor(String authorName) {
-        return bookRepository.findBooksByAuthorsAuthorName(authorName)
-                .map(book -> book.getPublisher().getPublisherName())
-                .distinct()
+        return publisherRepository.findDistinctByBooksAuthorsAuthorNameIgnoreCase(authorName)
+                .map(Publisher::getPublisherName)
                 .toList();
+//        return bookRepository.findBooksByAuthorsAuthorName(authorName)
+//                .map(book -> book.getPublisher().getPublisherName())
+//                .distinct()
+//                .toList();
     }
 
     //???
@@ -103,9 +110,9 @@ public class BookServiceImpl implements BookService {
     @Transactional
     public AuthorDto removeAuthor(String authorName) {
         Author author = authorRepository.findById(authorName).orElseThrow(NotFoundException::new);
-        bookRepository.findBooksByAuthorsAuthorName(authorName)
-//                .filter(book -> book.getAuthors().size() > 1)
-                .forEach(book -> book.getAuthors().removeIf(a -> a.getAuthorName().equals(authorName)));
+//        bookRepository.findBooksByAuthorsAuthorName(authorName)
+////                .filter(book -> book.getAuthors().size() > 1)
+//                .forEach(book -> book.getAuthors().removeIf(a -> a.getAuthorName().equals(authorName)));
         authorRepository.deleteById(authorName);
         return modelMapper.map(author, AuthorDto.class);
     }
